more minor layout issues

--- a/src/members/members.scss
+++ b/src/members/members.scss
@@ -191,6 +191,7 @@ ux-dialog-containerxxx {
         //height: 260px;
         overflow-y: auto;
         overflow-x: hidden;
+        border-bottom: 6px solid white;
         //border-top: 6px solid white;
         //border-bottom: 6px solid white;
         background-color: rgba(208, 208, 208, 0.5);
